# exercise-catalog-api

./: README.md  pyproject.toml
app/: __init__.py  main.py  models.py  repository.py  routes.py
docs/: roadmap.md
services/exercise-service/: pyproject.toml
services/exercise-service/app/: repository.py  routes.py
tests/: test_exercises.py
